tests/fixtures/errors/invalid_preproc_procedure_unsupported.puml
@startuml
!procedure Build($x)
!return $x
!endprocedure
!Build("a")
A -> B: one
@enduml
